log/build_2025-07-09_17-18-43/ros2_traffic_detector/stderr.log
  File "/home/ponnu/ros2_ws/install/ros2_traffic_detector/lib/python3.10/site-packages/ros2_traffic_detector/traffic_light_infer.py", line 32
    self.get_logger().info("🖼 Detection complete - image saved."
                          ^
SyntaxError: '(' was never closed

